Shadow moves with drawer. Closes ticket #5